# aeserialization-rust-erl

./: .gitignore  LICENSE  README.md  rebar.config
native/aeser_erl/: Cargo.toml  README.md
native/aeser_erl/src/: aeser_rlp.rs  lib.rs
native/aeser_nif/: Cargo.toml
native/aeser_nif/src/: aeser_nif.rs  binaries.rs  erl.rs  lib.rs
native/aesr_nif/: Cargo.toml  README.md
native/aesr_nif/src/: binaries.rs  lib.rs
src/: aeser_api_encoder.erl  aeser_contract_code.erl  aeser_erl.app.src  aeser_id.erl  aeser_nif.erl  aeser_rlp.erl  aeser_rlp_eqc.erl  aesr_api_encoder.erl  aesr_contract_code.erl  aesr_erl.app.src  aesr_id.erl  aesr_nif.erl  aesr_rlp.erl  aesr_rlp_eqc.erl  cargo.hrl
test/: aeser_api_encoder_tests.erl  aeser_contract_code_tests.erl  aeser_rlp_tests.erl  aesr_api_encoder_tests.erl  aesr_contract_code_tests.erl  aesr_rlp_eqc_SUITE.erl  aesr_rlp_tests.erl
