[package]
name = "aesr_nif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aesr_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.28.0"
aeserialization = { git = "https://github.com/aeternity/aeserialization-rust", branch = "develop" }
